--- a/src/components/split_button/_split_button_control.scss
+++ b/src/components/split_button/_split_button_control.scss
@@ -24,6 +24,10 @@ $splitButtonSeparatorColor: shade($ouiColorPrimary, 50%);
     border-bottom-right-radius: 0px;
     border-bottom-left-radius: 0px;
 
+    &:not(.ouiButton--fill) {
+      background: transparent;
+    }
+
     &:hover,
     &:active,
     &:focus {
@@ -36,6 +40,10 @@ $splitButtonSeparatorColor: shade($ouiColorPrimary, 50%);
     border-width: 0px;
     border-radius: 0px;
 
+    &:not(.ouiButtonIcon--fill) {
+      background: transparent;
+    }
+
     &:hover,
     &:active,
     &:focus {
@@ -47,6 +55,10 @@ $splitButtonSeparatorColor: shade($ouiColorPrimary, 50%);
   .ouiSplitButtonControl {
     border: $ouiBorderWidthThick solid $ouiBorderColor;
     border-radius: $ouiButtonBorderRadius;
+
+    &:not(.ouiButton) {
+      background: $ouiButtonBackgroundColor;
+    }
   }
 
   // Create button modifiers based upon the map.
