--- a/src/themes/v9/global_styling/variables/_form.scss
+++ b/src/themes/v9/global_styling/variables/_form.scss
@@ -16,7 +16,7 @@ $ouiFormControlCompressedHeight: $ouiSizeXL !default;
 $ouiFormControlPadding: $ouiSizeM !default;
 $ouiFormControlCompressedPadding: $ouiSizeS !default;
 $ouiFormControlBorderRadius: 0 !default;
-$ouiFormControlCompressedBorderRadius: $ouiBorderRadiusSmall !default;
+$ouiFormControlCompressedBorderRadius: 2px !default;
 
 $ouiRadioSize: $ouiSize !default;
 $ouiCheckBoxSize: $ouiSize !default;
