--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -20,6 +20,7 @@
   }
 
   border-radius: $ouiButtonBorderRadius;
+  background-color: $ouiButtonBackgroundColor;
   min-width: $ouiButtonMinWidth;
 
   .ouiButton__content {
@@ -83,6 +84,7 @@
     @if ($name == 'ghost') {
       // Ghost is unique and ALWAYS sits against a dark background.
       color: $color;
+      background-color: transparent;
     } @else if ($name == 'text') {
       // The default color is lighter than the normal text color, make the it the text color
       color: $ouiTextColor;
