Update v9 colors and typography
Signed-off-by: Viraj Sanghvi <virajs@amazon.com>

--- a/src-docs/src/theme_v9_dark.scss
+++ b/src-docs/src/theme_v9_dark.scss
@@ -10,7 +10,7 @@
  */
 
 // sass-lint:disable no-url-domains, no-url-protocols
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 
 @import '../../src/theme_v9_dark';
 @import './components/guide_components';
