--- a/src/themes/v9/global_styling/variables/_colors.scss
+++ b/src/themes/v9/global_styling/variables/_colors.scss
@@ -30,7 +30,7 @@ $ouiColorDanger: #C84233 !default;
 $ouiColorEmptyShade: #FFFFFF !default;
 $ouiColorLightestShade: #F7F4F2 !default;
 $ouiColorLightShade: #EBE4DF !default;
-$ouiColorMediumShade: #C1AC9C !default;
+$ouiColorMediumShade: #D8CBC1 !default;
 $ouiColorDarkShade: #585858 !default;
 $ouiColorDarkestShade: #262626 !default;
 $ouiColorFullShade: #131313 !default;
