--- a/src/themes/v9/global_styling/variables/_buttons.scss
+++ b/src/themes/v9/global_styling/variables/_buttons.scss
@@ -14,11 +14,11 @@ $ouiButtonHeightSmall: $ouiSizeXL !default;
 $ouiButtonHeightXSmall: $ouiSizeL !default;
 
 // sass-lint:disable no-color-literals
-$ouiButtonColorDisabled: lightOrDarkTheme(#AFAFAF, $ouiColorLightShade) !default;
+$ouiButtonColorDisabled: lightOrDarkTheme(#444444, #AFAFAF) !default;
 // Only increase the contrast of background color to text to 2.0 for disabled
-$ouiButtonColorDisabledText: lightOrDarkTheme(#8E8E8E, #585858) !default;
+$ouiButtonColorDisabledText: lightOrDarkTheme(#585858, #8E8E8E) !default;
 // sass-lint:disable no-color-literals
-$ouiButtonColorGhostDisabled: lightOrDarkTheme(#585858, #353535) !default;
+$ouiButtonColorGhostDisabled: lightOrDarkTheme(#353535, #585858) !default;
 
 $ouiButtonBorderRadius: $ouiBorderRadius !default;
 $ouiButtonBackgroundColor: $ouiColorEmptyShade;
