--- a/src/themes/v9/v9_colors_dark.scss
+++ b/src/themes/v9/v9_colors_dark.scss
@@ -13,7 +13,7 @@
 
 // These colors stay the same no matter the theme
 $ouiColorGhost: #FFFFFF;
-$ouiColorInk: #000304;
+$ouiColorInk: #000F15;
 
 // Core
 $ouiColorPrimary: #0082B4;
@@ -23,19 +23,19 @@ $ouiColorAccent: #A55AC3;
 // Status
 $ouiColorSuccess: $ouiColorSecondary;
 $ouiColorWarning: #FFCA75;
-$ouiColorDanger: #EC6F62;
+$ouiColorDanger: #CC5A53;
 
 // Grays
-$ouiColorEmptyShade: #000304;
-$ouiColorLightestShade: #000F15;
-$ouiColorLightShade: #001720;
-$ouiColorMediumShade: #00202D;
+$ouiColorEmptyShade: #001822;
+$ouiColorLightestShade: #1A1A1A;
+$ouiColorLightShade: #222222;
+$ouiColorMediumShade: #333333;
 $ouiColorDarkShade: #CCCCCC;
 $ouiColorDarkestShade: #E5E5E5;
 $ouiColorFullShade: #F5F5F5;
 
 // Backgrounds
-$ouiPageBackgroundColor: #04090B;
+$ouiPageBackgroundColor: #000F15;
 $ouiColorHighlight: #261C08;
 
 // Variations from core
