--- a/src/themes/v9/global_styling/variables/_tool_tip.scss
+++ b/src/themes/v9/global_styling/variables/_tool_tip.scss
@@ -9,7 +9,7 @@
  * GitHub history for details.
  */
 
-$ouiTooltipBackgroundColor: #293847 !default;
+$ouiTooltipBackgroundColor: $ouiColorDarkestShade !default;
 
 $ouiTooltipAnimations: (
   top: ouiToolTipTop,
